--- a/src/app/user-panel/user-panel.component.html
+++ b/src/app/user-panel/user-panel.component.html
@@ -1,4 +1,5 @@
 <div class="container tableWidth">
+  <ngb-alert  type="danger" *ngIf="displayErrorAlert" (close)="displayErrorAlert = false">{{errorMessage}}</ngb-alert>
 <div class="row">
     <div class="col-xs-12 col-lg-12">
       <form (ngSubmit)="onSubmit(form)" #form="ngForm">
@@ -51,34 +52,35 @@
 </div>
   </div><div class="container tableWidth">
     <table class="table table-dark">
-        <tbody>
+        <tbody *ngIf="currentSummoner">
             <tr>
                 <td>Account Id</td>
-                <td>{{currentSummoner?.accountId}}</td>
+                <td>{{currentSummoner.accountId}}</td>
             </tr>
             <tr>
                 <td>Profile Icon</td>
-                <td>{{currentSummoner?.profileIconId}}</td>
+                <td><img src="https://ddragon.leagueoflegends.com/cdn/10.16.1/img/profileicon/{{currentSummoner.profileIconId}}.png" alt="profile-icon" id="profile-icon">
+                  </td>
             </tr>
             <tr>
                 <td>Revision Date</td>
-                <td>{{currentSummoner?.revisionDate}}</td>
+                <td>{{currentSummoner.revisionDate | date}}</td>
             </tr>
             <tr>
                 <td>Name</td>
-                <td>{{currentSummoner?.name}}</td>
+                <td>{{currentSummoner.name}}</td>
             </tr>
             <tr>
                 <td>Id</td>
-                <td>{{currentSummoner?.id}}</td>
+                <td>{{currentSummoner.id}}</td>
             </tr>
             <tr>
                 <td>Puuid</td>
-                <td>{{currentSummoner?.puuid}}</td>
+                <td>{{currentSummoner.puuid}}</td>
             </tr>
             <tr>
                 <td>Summoner Level</td>
-                <td>{{currentSummoner?.summonerLevel}}</td>
+                <td>{{currentSummoner.summonerLevel}}</td>
             </tr>
         </tbody>
     </table>
