--- a/src/app/user-panel/user-matches/user-match/user-match.component.html
+++ b/src/app/user-panel/user-matches/user-match/user-match.component.html
@@ -2,10 +2,12 @@
     <div class="col">{{match.champion}}</div>
     <div class="col">{{match.gameId}}</div>
     <div class="col">{{match.lane}}</div>
-    <div class="col">{{match.lane}}</div>
     <div class="col">{{match.platformId}}</div>
     <div class="col">{{match.queue}}</div>
     <div class="col">{{match.role}}</div>
     <div class="col">{{match.seson}}</div>
     <div class="col">{{match.timestamp}}</div>    
+    <div class="col">{{match.win}}</div>    
+    <div class="col">{{match.gameDuration}}</div>    
+    <div class="col">{{match.gameMode}}</div>    
 </div>
