--- a/src/app/user-panel/user-matches/user-match/user-match.component.html
+++ b/src/app/user-panel/user-matches/user-match/user-match.component.html
@@ -1,4 +1,5 @@
 <div  class="row">
+    <div class="col"><img src="{{returnChampionUrl()}}"></div>
     <div class="col">{{match.champion}}</div>
     <div class="col">{{match.gameId}}</div>
     <div class="col">{{match.lane}}</div>
