--- a/src/app/user-panel/user-panel.component.scss
+++ b/src/app/user-panel/user-panel.component.scss
@@ -5,3 +5,34 @@
 #profile-icon {
     max-width: 150px;
 }
+
+.user-input {
+    margin-top: 30px;
+}
+
+.button {
+    border: none;
+    color: white;
+    padding: 12px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    border-radius: 4px
+}
+
+.add-info {
+    background-color: #52414a;
+    margin-right: 10px;
+}
+
+.clear-info {
+    background-color: #36252f;
+    margin-left: 10px;
+}
+
+.table-color {
+    background-color: #14213d;
+    color: whitesmoke;
+}
+
