routing and resolvers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div id="user-panel">
-        <app-user-panel></app-user-panel>
+        <router-outlet></router-outlet>
+        <!-- <app-user-panel></app-user-panel> -->
 </div>
