--- a/src/app/user-panel/user-panel.component.html
+++ b/src/app/user-panel/user-panel.component.html
@@ -40,7 +40,9 @@
   <table class="table table-color">
     <tbody *ngIf="currentSummoner">
       <tr>
-        <td>Account Id</td>
+        <td
+        
+        >Account Id</td>
         <td>{{currentSummoner.accountId}}</td>
       </tr>
       <tr>
