match display adjustements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div id="user-panel">
-        <router-outlet></router-outlet>
+        <div class="container tableWidth">
+                <router-outlet></router-outlet>
+        </div>
         <!-- <app-user-panel></app-user-panel> -->
 </div>
