--- a/src/app/user-panel/user-matches/user-matches.component.html
+++ b/src/app/user-panel/user-matches/user-matches.component.html
@@ -1,13 +1,5 @@
-<div class="container">
-    <div class="row">
-        <div class="col">            
-        </div>
-        <div class="col-6">
-            <div *ngFor="let match of matches">
-                <app-user-match [match]="match"></app-user-match>
-            </div>
-        </div>
-        <div class="col">
-        </div>
+<div>
+    <div *ngFor="let match of matches">
+        <app-user-match [match]="match"></app-user-match>
     </div>
 </div>
