--- a/src/app/user-panel/user-matches/user-match/user-match.component.scss
+++ b/src/app/user-panel/user-matches/user-match/user-match.component.scss
@@ -1,9 +1,15 @@
 .win-color {
-    background-color: rgb(17, 85, 40);
+    background-color: rgb(6, 48, 6);
+}
+.win-color:hover {
+    background-color: rgba(53, 138, 53, 0.733);
 }
 
 .lose-color {
-    background-color: rgb(92, 25, 25);
+    background-color: rgb(133, 12, 12);
+}
+.lose-color:hover {
+    background-color: rgb(165, 67, 67);
 }
 
 .row {
@@ -11,3 +17,7 @@
     border-style: solid;
     border-color: rgba(8, 7, 24, 0.61);
 } 
+
+.row:hover {
+    cursor: pointer;
+}
