--- a/src/app/match-info/participants/participants.component.html
+++ b/src/app/match-info/participants/participants.component.html
@@ -1,1 +1,4 @@
 <p>participants works!</p>
+<div *ngFor="let participant of singleParticipant">
+    <app-participant [singleParticipant]="participant"></app-participant>
+</div>
