--- a/src/app/user-panel/user-panel.component.html
+++ b/src/app/user-panel/user-panel.component.html
@@ -43,7 +43,7 @@
       <tr>
         <td>Profile Icon</td>
         <td><img
-            src="https://ddragon.leagueoflegends.com/cdn/10.16.1/img/profileicon/{{currentSummoner.profileIconId}}.png"
+            src="{{displayPlayerIcon()}}"
             alt="profile-icon" id="profile-icon">
         </td>
       </tr>
