rearraging the app
4 new components added: profile, default as well as profile/user-info and profile/ user-analysis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="user-panel">
         <div class="container tableWidth">
+                <app-user-panel></app-user-panel>
                 <router-outlet></router-outlet>
         </div>
-        <!-- <app-user-panel></app-user-panel> -->
 </div>
