--- a/src/app/user-panel/user-panel.component.html
+++ b/src/app/user-panel/user-panel.component.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 <div>
-  <table class="table table-color">
+  <!-- <table class="table table-color">
     <tbody *ngIf="currentSummoner">
       <tr>
         <td      
@@ -72,4 +72,4 @@
 </div>
 <div *ngIf="inputUsername && server && currentSummoner">
   <app-user-matches [summonerName]="inputUsername" [serverName]="server"></app-user-matches>
-</div>
+</div> -->
